--- a/delivery.html
+++ b/delivery.html
@@ -113,7 +113,7 @@
     function validarChave(){
       const chave = document.getElementById("chaveAcesso").value.trim();
       // 🔑 Defina a chave secreta de acesso (troque por outra)
-      if(chave === "MEU-CODIGO-123"){
+      if(chave === "talita.melo"){
         document.getElementById("telaBloqueio").style.display="none";
         document.getElementById("conteudoApp").classList.remove("hidden");
         localStorage.setItem("acessoLiberado","true");
