--- a/delivery.html
+++ b/delivery.html
@@ -3,205 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planilha Inteligente - Excel + Dashboards</title>
+  <title>Robô Aviator Premium</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family:'Poppins',sans-serif; background:#0f0f0f; color:#fff; margin:0; }
-    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); padding:15px; text-align:center; font-size:20px; font-weight:600; }
-    nav { display:flex; justify-content:center; gap:15px; background:#1e1e2f; padding:10px; }
-    nav button { background:#8e24aa; border:none; padding:10px 20px; border-radius:6px; color:#fff; cursor:pointer; font-weight:600; }
-    nav button.active { background:#d81b60; }
-    nav button:hover { opacity:.9; }
-
-    main { padding:20px; max-width:1400px; margin:auto; }
-    .hidden { display:none; }
-
-    /* Planilha */
-    .sheet { background:#1e1e2f; padding:10px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,.4); overflow:auto; }
-    table { border-collapse:collapse; width:100%; min-width:600px; }
-    th, td { border:1px solid #444; padding:6px; text-align:center; min-width:80px; }
-    th { background:#2c2c3c; position:sticky; top:0; }
-    .rowHeader { background:#2c2c3c; }
-    td[contenteditable="true"] { background:#1e1e2f; outline:none; }
-
-    .controls { margin:15px 0; display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-    .controls button, .controls a { padding:10px 20px; border-radius:6px; border:none; font-size:14px; cursor:pointer; text-decoration:none; font-weight:600; }
-    .controls button { background:#8e24aa; color:#fff; }
-    .controls button:hover { background:#d81b60; }
-    .controls a { background:#43a047; color:#fff; }
-    .controls a:hover { background:#2e7d32; }
-
-    /* Dashboards */
-    .dashboards { display:grid; grid-template-columns:1fr 1fr; gap:20px; }
-    .dashboards canvas { background:#121212; border-radius:12px; padding:10px; }
-    @media(max-width: 900px){
-      .dashboards { grid-template-columns:1fr; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #0f0f0f;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-
-    /* Tela de bloqueio */
-    #telaBloqueio { text-align:center; padding:50px; }
-    #telaBloqueio h2 { margin-bottom:10px; }
-    #telaBloqueio a { background:#43a047; padding:12px 25px; border-radius:6px; color:white; text-decoration:none; font-size:16px; font-weight:600; }
-    #telaBloqueio a:hover { background:#2e7d32; }
-    #telaBloqueio input { padding:10px; border-radius:6px; border:none; margin-top:15px; }
-    #telaBloqueio button { padding:10px 20px; margin-left:10px; border:none; border-radius:6px; background:#8e24aa; color:white; cursor:pointer; }
-    #msgErro { color:#f44336; margin-top:10px; }
+    header {
+      background: #1a1a1a;
+      padding: 15px;
+      font-size: 20px;
+      font-weight: 600;
+      color: #00ff9d;
+    }
+    .screen {
+      display: none;
+      padding: 20px;
+    }
+    .active {
+      display: block;
+    }
+    button, a {
+      display: block;
+      margin: 15px auto;
+      padding: 12px 20px;
+      background: #00ff9d;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      color: #000;
+      width: 80%;
+      max-width: 250px;
+    }
+    button:hover, a:hover {
+      background: #00cc7a;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      background: #1a1a1a;
+      margin: 8px 0;
+      padding: 10px;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
-  <header>📊 Planilha Inteligente - Excel + Dashboards</header>
 
-  <!-- Tela de bloqueio -->
-  <div id="telaBloqueio">
-    <h2>🔒 Acesso restrito</h2>
-    <p>Adquira a licença para desbloquear o app:</p>
-    <a href="https://mpago.li/1Ys2kBK" target="_blank">💳 Comprar por R$29,90</a>
-    <p style="margin-top:20px;">Já comprou? Digite sua chave de acesso:</p>
-    <input type="password" id="chaveAcesso" placeholder="Digite a chave">
-    <button onclick="validarChave()">Entrar</button>
-    <p id="msgErro"></p>
+  <header>🚀 Robô Aviator Premium</header>
+
+  <!-- Tela de login -->
+  <div id="login" class="screen active">
+    <h2>Assine para ter acesso 🔒</h2>
+    <a href="https://mpago.la/27kUsuM" target="_blank">💳 Assinar Agora</a>
+    <button onclick="entrar()">Entrar</button>
   </div>
 
-  <!-- Conteúdo do app -->
-  <div id="conteudoApp" class="hidden">
-    <nav>
-      <button id="btnPlanilha" class="active" onclick="mostrarTela('planilha')">📝 Planilha</button>
-      <button id="btnDashboards" onclick="mostrarTela('dashboards')">📈 Dashboards</button>
-    </nav>
+  <!-- Dashboard -->
+  <div id="dashboard" class="screen">
+    <h2>📊 Sinais Exclusivos</h2>
+    <ul id="listaSinais">
+      <li>⏰ 17:48 — Entrada até 2x</li>
+      <li>⏰ 17:52 — Buscar 5x</li>
+      <li>⏰ 17:59 — Proteção até 3x</li>
+    </ul>
 
-    <main>
-      <!-- TELA PLANILHA -->
-      <section id="telaPlanilha">
-        <div class="controls">
-          <button onclick="adicionarLinha()">➕ Adicionar Linha</button>
-          <button onclick="adicionarColuna()">➕ Adicionar Coluna</button>
-        </div>
-        <div class="sheet">
-          <table id="tabela">
-            <thead>
-              <tr id="cabecalho">
-                <th></th><th>A</th><th>B</th><th>C</th>
-              </tr>
-            </thead>
-            <tbody id="corpo">
-              <tr><td class="rowHeader">1</td><td contenteditable="true">Nome</td><td contenteditable="true">Telefone</td><td contenteditable="true">Endereço</td></tr>
-              <tr><td class="rowHeader">2</td><td contenteditable="true">10</td><td contenteditable="true">20</td><td contenteditable="true">30</td></tr>
-              <tr><td class="rowHeader">3</td><td contenteditable="true">15</td><td contenteditable="true">25</td><td contenteditable="true">40</td></tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
+    <h2>🎮 Plataforma Oficial</h2>
+    <a href="https://goathbet.com/?r=zktgmbwl" target="_blank">▶️ Jogar Agora</a>
 
-      <!-- TELA DASHBOARDS -->
-      <section id="telaDashboards" class="hidden">
-        <div class="dashboards">
-          <canvas id="graficoLinha"></canvas>
-          <canvas id="graficoBarra"></canvas>
-          <canvas id="graficoPizza"></canvas>
-        </div>
-      </section>
-    </main>
+    <button onclick="sair()">Sair</button>
   </div>
 
   <script>
-    const tabela=document.getElementById("tabela");
-    const corpo=document.getElementById("corpo");
-    const cabecalho=document.getElementById("cabecalho");
-
-    // Função de validação da chave
-    function validarChave(){
-      const chave = document.getElementById("chaveAcesso").value.trim();
-      // 🔑 Defina a chave secreta de acesso (troque por outra)
-      if(chave === "liberado"){
-        document.getElementById("telaBloqueio").style.display="none";
-        document.getElementById("conteudoApp").classList.remove("hidden");
-        localStorage.setItem("acessoLiberado","true");
-      } else {
-        document.getElementById("msgErro").innerText="❌ Chave inválida. Tente novamente.";
-      }
+    function entrar() {
+      document.getElementById("login").classList.remove("active");
+      document.getElementById("dashboard").classList.add("active");
     }
-
-    // Se já liberou antes, mantém acesso
-    if(localStorage.getItem("acessoLiberado")==="true"){
-      document.getElementById("telaBloqueio").style.display="none";
-      document.getElementById("conteudoApp").classList.remove("hidden");
+    function sair() {
+      document.getElementById("dashboard").classList.remove("active");
+      document.getElementById("login").classList.add("active");
     }
-
-    // Navegação entre telas
-    function mostrarTela(tela){
-      document.getElementById("telaPlanilha").classList.add("hidden");
-      document.getElementById("telaDashboards").classList.add("hidden");
-      document.getElementById("btnPlanilha").classList.remove("active");
-      document.getElementById("btnDashboards").classList.remove("active");
-
-      if(tela==="planilha"){ 
-        document.getElementById("telaPlanilha").classList.remove("hidden"); 
-        document.getElementById("btnPlanilha").classList.add("active"); 
-      } else { 
-        document.getElementById("telaDashboards").classList.remove("hidden"); 
-        document.getElementById("btnDashboards").classList.add("active"); 
-        atualizarGraficos(); 
-      }
-    }
-
-    // Gráficos
-    const ctxLinha=document.getElementById("graficoLinha").getContext("2d");
-    const ctxBarra=document.getElementById("graficoBarra").getContext("2d");
-    const ctxPizza=document.getElementById("graficoPizza").getContext("2d");
-
-    let graficoLinha=new Chart(ctxLinha,{type:'line',data:{labels:[],datasets:[]},options:{plugins:{legend:{labels:{color:"white"}}},scales:{x:{ticks:{color:"white"}},y:{ticks:{color:"white"}}}}});
-    let graficoBarra=new Chart(ctxBarra,{type:'bar',data:{labels:[],datasets:[]},options:{plugins:{legend:{labels:{color:"white"}}},scales:{x:{ticks:{color:"white"}},y:{ticks:{color:"white"}}}}});
-    let graficoPizza=new Chart(ctxPizza,{type:'pie',data:{labels:[],datasets:[{data:[],backgroundColor:[]}]},options:{plugins:{legend:{labels:{color:"white"}}}}});
-
-    function atualizarGraficos(){
-      const rows=Array.from(corpo.rows);
-      if(rows.length<2) return;
-
-      const categorias=Array.from(rows[0].cells).slice(1).map(c=>c.innerText.trim());
-      const valores=rows.slice(1).map(r=>Array.from(r.cells).slice(1).map(c=>parseFloat(c.innerText)||0));
-      const soma=categorias.map((_,colIdx)=>valores.reduce((acc,row)=>acc+(row[colIdx]||0),0));
-
-      graficoLinha.data.labels=rows.slice(1).map(r=>r.cells[0].innerText);
-      graficoLinha.data.datasets=categorias.map((cat,idx)=>({
-        label:cat||`Coluna ${idx+1}`, data:valores.map(v=>v[idx]||0),
-        borderColor:getCor(idx), backgroundColor:"transparent"
-      }));
-
-      graficoBarra.data.labels=graficoLinha.data.labels;
-      graficoBarra.data.datasets=categorias.map((cat,idx)=>({
-        label:cat||`Coluna ${idx+1}`, data:valores.map(v=>v[idx]||0), backgroundColor:getCor(idx)
-      }));
-
-      graficoPizza.data.labels=categorias;
-      graficoPizza.data.datasets[0].data=soma;
-      graficoPizza.data.datasets[0].backgroundColor=categorias.map((_,idx)=>getCor(idx));
-
-      graficoLinha.update(); graficoBarra.update(); graficoPizza.update();
-    }
-
-    function adicionarLinha(){
-      const rowCount=corpo.rows.length+1;
-      const tr=document.createElement("tr");
-      const tdHeader=document.createElement("td");
-      tdHeader.className="rowHeader"; tdHeader.innerText=rowCount;
-      tr.appendChild(tdHeader);
-      for(let i=1;i<cabecalho.cells.length;i++){
-        const td=document.createElement("td"); td.contentEditable="true"; tr.appendChild(td);
-      }
-      corpo.appendChild(tr);
-    }
-
-    function adicionarColuna(){
-      const colCount=cabecalho.cells.length;
-      const th=document.createElement("th"); th.innerText=String.fromCharCode(64+colCount); cabecalho.appendChild(th);
-      for(let i=0;i<corpo.rows.length;i++){ const td=document.createElement("td"); td.contentEditable="true"; corpo.rows[i].appendChild(td); }
-    }
-
-    function getCor(i){const cores=["#8e24aa","#d81b60","#ffb74d","#29b6f6","#43a047","#f44336","#3f51b5"]; return cores[i%cores.length];}
-
-    tabela.addEventListener("input",()=>{ if(document.getElementById("telaDashboards").classList.contains("hidden")===false) atualizarGraficos(); });
   </script>
+
 </body>
 </html>
-
