--- a/delivery.html
+++ b/delivery.html
@@ -5,7 +5,206 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Robô Aviator Premium</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mago das Bet's</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    /* ===== RESET ===== */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1a1a1a, #000);
+      color: #fff;
+      min-height: 100vh;
+    }
+
+    /* ===== SPLASH ===== */
+    #splash {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(135deg, #000, #111, #1a1a1a);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 9999;
+      animation: fadeOut 1s ease forwards;
+      animation-delay: 3s;
+    }
+    #splash h1 {
+      font-size: 2.5rem;
+      color: #ffd700;
+      text-shadow: 0 0 15px #ff0000;
+    }
+    #splash p {
+      color: #ccc;
+      margin-top: 10px;
+    }
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
+    /* ===== TOPO ===== */
+    header {
+      background: rgba(0,0,0,0.8);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #333;
+    }
+    header h1 {
+      font-size: 1.5rem;
+      color: #ffd700;
+      text-shadow: 0 0 10px #ff0000;
+    }
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      color: #ffd700;
+    }
+
+    /* ===== CONTEÚDO ===== */
+    main {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 20px;
+      gap: 20px;
+    }
+    .plataforma {
+      flex: 2;
+      min-width: 300px;
+      background: #111;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(0,0,0,0.7);
+    }
+    .relatorio {
+      flex: 1;
+      min-width: 250px;
+      background: #1c1c1c;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.7);
+    }
+    .relatorio h2 {
+      color: #ffd700;
+      margin-bottom: 15px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.9rem;
+    }
+    th, td {
+      padding: 8px;
+      text-align: center;
+      border-bottom: 1px solid #333;
+    }
+    th {
+      background: #ffd700;
+      color: #000;
+    }
+    tr:hover { background: #222; }
+
+    /* ===== PERFIL ===== */
+    #perfil {
+      display: none;
+      padding: 30px;
+      text-align: center;
+    }
+    #perfil h2 {
+      margin-bottom: 15px;
+      color: #ffd700;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      margin-top: 20px;
+      background: #ff0000;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn:hover { background: #cc0000; }
+  </style>
+</head>
+<body>
+  <!-- SPLASH -->
+  <div id="splash">
+    <h1>✨ Mago das Bet's ✨</h1>
+    <p>O poder das análises em suas mãos</p>
+  </div>
+
+  <!-- TOPO -->
+  <header>
+    <h1>Mago das Bet's</h1>
+    <nav>
+      <a href="#" onclick="mostrar('dashboard')">Dashboard</a>
+      <a href="#" onclick="mostrar('perfil')">Perfil</a>
+    </nav>
+  </header>
+
+  <!-- DASHBOARD -->
+  <main id="dashboard">
+    <section class="plataforma">
+      <iframe src="https://7xx.vip/?pid=575973404" width="100%" height="500"></iframe>
+    </section>
+    <section class="relatorio">
+      <h2>📊 Últimas Rodadas</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Rodada</th>
+            <th>Multiplicador</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="tabelaResultados">
+          <!-- Fake results serão adicionados aqui -->
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+  <!-- PERFIL -->
+  <section id="perfil">
+    <h2>👤 Perfil do Usuário</h2>
+    <p>Email: cliente@exemplo.com</p>
+    <p>Status: <strong>Plano Gratuito</strong></p>
+    <a href="#" class="btn">Ativar Plano Premium</a>
+  </section>
+
+  <script>
+    // Alternar entre Dashboard e Perfil
+    function mostrar(secao) {
+      document.getElementById("dashboard").style.display = secao === "dashboard" ? "flex" : "none";
+      document.getElementById("perfil").style.display = secao === "perfil" ? "block" : "none";
+    }
+
+    // Gerar resultados fake
+    const tabela = document.getElementById("tabelaResultados");
+    const status = ["🔥 Green", "❌ Red"];
+    for (let i = 1; i <= 15; i++) {
+      const mult = (Math.random() * 10 + 1).toFixed(2) + "x";
+      const st = status[Math.floor(Math.random() * status.length)];
+      const row = `<tr><td>#${i}</td><td>${mult}</td><td>${st}</td></tr>`;
+      tabela.innerHTML += row;
+    }
+  </script>
+</body>
+</html>
     body {
       font-family: 'Poppins', sans-serif;
       background: #0f0f0f;
